--- a/config/config.json.in
+++ b/config/config.json.in
@@ -1,18 +1,21 @@
 {
-  "application.key": "...",
-  "token": "...",
-
-  "irc": {
-    "host": "...",
-    "port": ...,
-    "password": "...",
-    "nick": "..."
+  "application": {
+    "key": "<https://trello.com/docs/gettingstarted/index.html#getting-an-application-key> で得られる application key",
+    "token": "<https://trello.com/docs/gettingstarted/index.html#getting-a-token-from-a-user> で得られる token"
   },
 
-  "subscription": [
+  "irc": {
+    "host": "接続する irc server の host です",
+    "port": "接続する irc server の port です. 数字",
+    "password": "irc server のパスワードです. 不要なら null",
+    "nick": "irc における nick です"
+  },
+
+  "stream.token": "WebSocket 用の token. Cookie から得る",
+  "subscriptions": [
     {
-      "board": "...",
-      "irc.channel": "..."
+      "board": "購読する board の id です",
+      "irc.channel": "更新情報を通知する irc チャネルです"
     }
   ]
 }
